--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <!-- Font awsome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -36,13 +36,11 @@
                 <div class="animation-preloader">
                     <div class="spinner"></div>
                     <div class="txt-loading">
-                        <div data-preloader-text="N" class="characters">N</div>
                         <div data-preloader-text="A" class="characters">A</div>
+                        <div data-preloader-text="S" class="characters">S</div>
                         <div data-preloader-text="I" class="characters">I</div>
                         <div data-preloader-text="R" class="characters">R</div>
-                        <div data-preloader-text="O" class="characters">O</div>
-                        <div data-preloader-text="B" class="characters">B</div>
-                        <div data-preloader-text="I" class="characters">I</div>
+                        
                     </div>
                 </div>
                 <div class="loader-section section-left"></div>
@@ -232,13 +230,9 @@
                             <h5 class="d-none">hidden</h5>
                             <h6 class="hello_text">Hello, It’s</h6>
                             <div class="nairobi_text animate one">
-                                <span class="singal-text">N</span><span class="singal-text">a</span>
-                                <span class="singal-text">i</span><span class="singal-text">r</span>
-                                <span class="singal-text">o</span><span class="singal-text">b</span>
-                                <span class="singal-text">i&nbsp;</span><br><span class="singal-text">G</span>
-                                <span class="singal-text">a</span><span class="singal-text">l</span>
-                                <span class="singal-text">z</span><span class="singal-text">a</span>
-                                <span class="singal-text">r</span><span class="singal-text">o</span>
+                                <span class="singal-text">A</span><span class="singal-text">S</span>
+                                <span class="singal-text">I</span><span class="singal-text">R</span>
+                                
                             </div>
                             <p class="design_text">I design, code, and build superficial things, and I love what I do.
                             </p>
